--- a/style.css
+++ b/style.css
@@ -22,3 +22,28 @@ body{
         margin-top: 1%;
         transform: translateX(-50%);
 }
+
+#game_over {
+    position: absolute;
+    top: 38%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 3em;
+    text-transform: uppercase;
+    font-family: "Press Start 2P", cursive;
+  }
+
+  #score {
+    position: absolute;
+    font-size: larger;
+    top: 75px;
+    right: 9%;
+    text-transform: uppercase;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid #cccccc;
+    padding: 12px;
+    border-radius: 25px;
+    box-shadow: inset 0 0 8px lightgreen;
+    color: #cccccc;
+  }
+  
