--- a/style.css
+++ b/style.css
@@ -1,49 +1,56 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,500;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
-:root{
-    overflow:hidden;
-}
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline:none;
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 
+:root {
+  overflow: hidden;
 }
 
-body{
-    background: #000d36;
-    color: white;
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
 }
 
-#canvas{
-        background: #fff;
-        margin-left: 50%; 
-        margin-top: 1%;
-        transform: translateX(-50%);
+body {
+  background: #000d36;
+  color: white;
+}
+
+#canvas {
+  background: #fff;
+  margin-left: 50%;
+  margin-top: 1%;
+  transform: translateX(-50%);
 }
 
 #game_over {
-    position: absolute;
-    top: 38%;
-    left: 50%;
-    transform: translateX(-50%);
-    font-size: 3em;
-    text-transform: uppercase;
-    font-family: "Press Start 2P", cursive;
-  }
+  position: absolute;
+  top: 38%;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 3em;
+  text-transform: uppercase;
+  font-family: "Press Start 2P", cursive;
+}
 
-  #score {
-    position: absolute;
-    font-size: larger;
-    top: 75px;
-    right: 9%;
-    text-transform: uppercase;
-    font-family: Arial, Helvetica, sans-serif;
-    border: 1px solid #cccccc;
-    padding: 12px;
-    border-radius: 25px;
-    box-shadow: inset 0 0 8px lightgreen;
-    color: #cccccc;
-  }
-  
+#score {
+  position: absolute;
+  font-size: larger;
+  top: 75px;
+  right: 9%;
+  text-transform: uppercase;
+  font-family: Arial, Helvetica, sans-serif;
+  border: 1px solid #cccccc;
+  padding: 12px;
+  border-radius: 25px;
+  box-shadow: inset 0 0 8px lightgreen;
+  color: #cccccc;
+}
+
+#high-score {
+  position: absolute;
+  top: 25px;
+  right: 5%;
+  color: yellow;
+  font-family: "Press Start 2P", cursive;
+}
