--- a/style.css
+++ b/style.css
@@ -54,3 +54,105 @@ body {
   color: yellow;
   font-family: "Press Start 2P", cursive;
 }
+
+#controls {
+  position: absolute;
+  top: 40%;
+  left: 12%;
+  display: flex;
+  flex-direction: column;
+}
+
+#control-keys {
+  top: 200px;
+  right: 7%;
+  position: absolute;
+  color: #ccccccd7;
+  padding: 12px;
+  font-size: 1.2em;
+  line-height: 48px;
+  box-shadow: 0 0 8px lightgreen;
+}
+
+#control-head {
+  text-align: center;
+  font-family: "Press Start 2P", cursive;
+}
+
+#reset,
+#show-grid,
+.pause-active {
+  background: #000d36;
+  color: #cccccc;
+  border-radius: 25px;
+  width: 120px;
+  padding: 12px;
+  margin-top: 18px;
+  box-shadow: 0 0 3px lightgreen;
+  font-size: 0.8em;
+  font-weight: bold;
+  transition: box-shadow 0.3s;
+  text-shadow: 0 0 8px lightseagreen;
+  text-transform: uppercase;
+}
+
+.pause-not-active {
+  background: rgba(239, 239, 240, 0.4);
+  box-shadow: none;
+  color: #cccccc;
+  border-radius: 25px;
+  width: 120px;
+  padding: 12px;
+  margin-top: 18px;
+  font-size: 0.8em;
+  font-weight: bold;
+  text-shadow: 0 0 8px lightseagreen;
+  text-transform: uppercase;
+}
+
+#reset:hover,
+#show-grid:hover,
+.pause-active:hover {
+  box-shadow: 0 0 12px lightgreen;
+  color: yellowgreen;
+}
+
+#play {
+  position: absolute;
+  top: 38%;
+  left: 50%;
+  transform: translateX(-50%);
+  font-family: "Press Start 2P", cursive;
+  font-size: 1.3em;
+  padding: 20px;
+  color: lightgreen;
+  animation: animate-play 1.4s linear infinite;
+}
+
+@keyframes animate-play {
+  0% {
+    text-shadow: 0 0 4px lightgreen;
+  }
+  50% {
+    text-shadow: 0 0 8px lightgreen;
+  }
+  100% {
+    text-shadow: 0 0 4px lightgreen;
+  }
+}
+
+#channel {
+  position: absolute;
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+  text-transform: uppercase;
+  top: 36%;
+  left: 14px;
+  font-size: 3.2em;
+  font-family: "Press Start 2P", cursive;
+  letter-spacing: 0.4em;
+  color: #cccccc;
+  text-shadow: 0 0 12px orange;
+  border: 5px solid rgba(255, 255, 0, 0.845);
+  padding: 14px;
+}
